Add basic HTML structure for elephant theme

--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Elephant and Baby</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <div class="container">
+        <h1>Gentle Giants</h1>
+        
+        <div class="haiku">
+            Gentle mother walks<br>
+            Little trunk holds mama's tail—<br>
+            Love in every step
+        </div>
+        
+        <img src="elephant.png" alt="Elephant and her baby">
+    </div>
+</body>
+</html>
