--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <nav class="navigation">
+        <a href="index.html" class="nav-link active">Page 1</a>
+        <a href="page2.html" class="nav-link">Page 2</a>
+        <a href="page3.html" class="nav-link">Page 3</a>
+    </nav>
+    
     <div class="container">
         <h1>Gentle Giants</h1>
         
